--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,10 @@
 
 	* add size_t overflow check for magic file size
 
+2014-02-27  16:01  Christos Zoulas <christos@zoulas.com>
+
+	* experimental support for matching with CFD CLSID
+
 2014-02-18  13:04  Kimmo Suominen (kimmo@suominen.com)
 
 	* Cache old LC_CTYPE locale before setting it to "C", so
