PR/367: Brooks Davis: Add magic_load_buffers to provide a means to load the magic database on environments that have no direct access to the filesystem.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-08-04   9:18  Christos Zoulas <christos@zoulas.com>
+
+	* add magic_load_buffers from Brooks Davis
+
 2014-07-24  16:40  Christos Zoulas <christos@zoulas.com>
 
 	* add thumbs.db support
