--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-08-17  10:01  Christos Zoulas <christos@zoulas.com>
+
+	* recognize encrypted CDF documents
+
 2014-08-04   9:18  Christos Zoulas <christos@zoulas.com>
 
 	* add magic_load_buffers from Brooks Davis
