--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-10-10  15:01  Christos Zoulas <christos@zoulas.com>
+
+	* release 5.20
+
 2014-08-17  10:01  Christos Zoulas <christos@zoulas.com>
 
 	* recognize encrypted CDF documents
