--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-12-10  20:01  Christos Zoulas <christos@zoulas.com>
+
+	* release 5.21
+
 2014-11-27  18:40  Christos Zoulas <christos@zoulas.com>
 
 	* Allow setting more parameters from the command line.
