--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2015-01-02  15:15  Christos Zoulas <christos@zoulas.com>
+
+	* release 5.22
+
 2015-01-01  12:01  Christos Zoulas <christos@zoulas.com>
 
 	* add indirect relative for TIFF/Exif
