--- a/doc/libmagic.man
+++ b/doc/libmagic.man
@@ -1,4 +1,4 @@
-.\" $File: libmagic.man,v 1.34 2014/12/16 23:18:40 christos Exp $
+.\" $File: libmagic.man,v 1.35 2015/04/09 20:01:40 christos Exp $
 .\"
 .\" Copyright (c) Christos Zoulas 2003.
 .\" All Rights Reserved.
@@ -25,7 +25,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd December 16, 2014
+.Dd April 9, 2015
 .Dt LIBMAGIC 3
 .Os
 .Sh NAME
@@ -132,6 +132,8 @@ Treat operating system errors while trying to open files and follow symlinks
 as real errors, instead of printing them in the magic buffer.
 .It Dv MAGIC_APPLE
 Return the Apple creator and type.
+.It Dv MAGIC_EXTENSION
+Return a comma-separated list of extensions for this file type.
 .It Dv MAGIC_NO_CHECK_APPTYPE
 Don't check for
 .Dv EMX
