--- a/doc/libmagic.man
+++ b/doc/libmagic.man
@@ -1,4 +1,4 @@
-.\" $File: libmagic.man,v 1.34 2014/12/16 23:18:40 christos Exp $
+.\" $File: libmagic.man,v 1.35 2015/04/09 20:01:40 christos Exp $
 .\"
 .\" Copyright (c) Christos Zoulas 2003.
 .\" All Rights Reserved.
@@ -133,7 +133,7 @@ as real errors, instead of printing them in the magic buffer.
 .It Dv MAGIC_APPLE
 Return the Apple creator and type.
 .It Dv MAGIC_EXTENSION
-Return a comma-separated list of extensions for this file type.
+Return a slash-separated list of extensions for this file type.
 .It Dv MAGIC_NO_CHECK_APPTYPE
 Don't check for
 .Dv EMX
